--- a/web/src/index.css
+++ b/web/src/index.css
@@ -96,11 +96,12 @@ body .modal {
 	color: var(--color-background);
 	display: flex;
 	flex-direction: column;
-	left: calc(50% - 200px);
+	left: calc(50% - 225px);
 	padding: 20px;
 	position: fixed;
 	transition: 0.25s;
-	width: 400px;
+	max-width: 550px;
+  width: 100%;
 }
 
 .close-modal {
@@ -147,12 +148,14 @@ body .modal {
 }
 
 body.modal .modal {
+  box-sizing: border-box;
 	top: 60px;
 }
 
 @media (max-width: 650px) {
 	body.modal .modal {
 		border-radius: 0;
+    left: 0;
 		min-height: 100vh;
 		top: 0;
 	}
