--- a/web/src/index.css
+++ b/web/src/index.css
@@ -86,6 +86,7 @@ a {
 main {
 	margin: 0 auto;
 	max-width: var(--max-width);
+  min-height: calc(100vh - 160px);
 	position: relative;
 	z-index: 2;
 }
