--- a/web/src/index.css
+++ b/web/src/index.css
@@ -7,6 +7,7 @@
 	--color-secondary: rgb(221, 238, 255);
 	--color-ternary: #457b9d;
 	--color-highlight: #e63946;
+  --color-background-secondary: #f5f5f5;
 	--color-border: rgba(221, 238, 255, 0.2);
 	--max-width: 1200px;
 }
@@ -83,10 +84,14 @@ a {
 	font-family: inherit;
 }
 
+li {
+  line-height: 1.5;
+}
+
 main {
 	margin: 0 auto;
 	max-width: var(--max-width);
-  min-height: calc(100vh - 160px);
+  min-height: calc(100vh - 195px);
 	position: relative;
 	z-index: 2;
 }
