--- a/web/src/index.css
+++ b/web/src/index.css
@@ -60,6 +60,11 @@ button:focus,
 	text-decoration: none;
 }
 
+.btn-primary {
+  background-color: var(--color-ternary);
+  color: var(--color-text);
+}
+
 button:disabled {
 	background-color: #999;
 	cursor: not-allowed;
