--- a/web/src/index.css
+++ b/web/src/index.css
@@ -70,6 +70,13 @@ button:disabled {
 	cursor: not-allowed;
 }
 
+.login-button {
+  position: absolute;
+  top: 26px;
+  right: 30px;
+  z-index: 20;
+}
+
 h1 {
 	font-family: 'Cabin Sketch', Helvetica, cursive;
 	font-size: 38px;
@@ -227,4 +234,11 @@ textarea {
 		right: 10px;
 		top: 10px;
 	}
+
+  .login-button {
+    font-size: 12px;
+    padding: 10px;
+    right: 10px;
+    top: 25px;
+  }
 }
